finish last watched

--- a/views/media.pug
+++ b/views/media.pug
@@ -619,7 +619,7 @@ block content
                     if ( upload.durationInSeconds > (15 * 60) ) && user
 
                                     if lastWatchedTime
-                                        p.fw.fileSizeText(style="margin-top:15px;color:a5a5a5;") Last Watched Time: #{lastWatchedTime.secondsWatched}
+                                        p.fw.fileSizeText(style="margin-top:15px;color:a5a5a5;") Last Watched Time: #{formattedLastWatchedTime}
                                     else
                                         p.fw.fileSizeText(style="margin-top:15px;color:a5a5a5;") No Last Watched Time
 
