--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -214,7 +214,7 @@ style.
 
   .search-uploads-button {
     border: 1px solid #5b5a5a;
-    z-index: 99999999;
+    z-index: 999999;
     background-color: #313131 !important;
   }
 
