various touchups and saving ffprobe data

--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -183,7 +183,7 @@ block content
                       br
                       br
 
-                    if maxRatingAllowed === 'NSFW' || maxRatingAllowed == 'SENS'
+                    if maxRatingAllowed == 'NSFW' || maxRatingAllowed == 'SENS'
                       label.fw.radio-inline(style="font-size:18px;")
                         input.radio-button(type='radio', name='rating' value="mature")
                         | Not Safe For Work
