--- a/views/media.pug
+++ b/views/media.pug
@@ -477,15 +477,14 @@ block content
                             h2.fw(style="display:inline;color: #a9a9a9; !important;").
                                 &nbsp - #{upload.formattedDuration}
 
-                    div.frameJumper(style="position:fixed")
+                    div.frameJumperLeft(style="position:fixed")
                         br
                         each seconds in [1,3,7,15]
-                            h7.fpsText(amountOfFrames=seconds) +#{seconds}
-                            br
+                            h4.fpsText(amountOfFrames=seconds) +#{seconds}
 
+                    div.frameJumperRight(style="position:fixed")
                         each seconds in [1,3,7,15]
-                            h7.fpsText(amountOfFrames=-seconds) -#{seconds}
-                            br
+                            h4.fpsText(amountOfFrames=-seconds) -#{seconds}
 
 
                 if upload.description
@@ -815,10 +814,20 @@ block extra_js
 
     $(document).ready(function () {
 
+
+      const attachToDiv = $('.plyr__video-wrapper');
+
       var destination = $('.plyr__video-wrapper').offset();
+
+      destination.right = ($(window).width() + $(window).scrollLeft()) - (destination.left + $('.plyr__video-wrapper').outerWidth(true));
+      destination.bottom = ($(window).height() + $(window).scrollTop()) - (destination.top + $('.plyr__video-wrapper').outerHeight(true));
+
+
       console.log(destination)
 
-      $('.frameJumper').css({top: destination.top, left: destination.left});
+      $('.frameJumperRight').css({top: 300, left: destination.left});
+
+      $('.frameJumperLeft').css({top: 300, right: destination.right});
 
 
       var fpsValue = '#{uploadFps}';
