update the screenshot

--- a/views/media.pug
+++ b/views/media.pug
@@ -861,9 +861,12 @@ block extra_js
           var link = document.createElement('a');
 
 
+          var title = '#{upload.title}'
+
+
           if(player.currentTime == 0 ){
 
-            link.download = 'screenshot.jpg';
+            link.download = '#{title}.jpg';
 
             console.log('use thumbnail');
             console.log(thumbnailUrl);
@@ -872,7 +875,7 @@ block extra_js
 
           } else {
 
-            link.download = 'screenshot.png';
+            link.download = '#{title}.png';
 
             console.log('use canvas')
             link.href = canvas.toDataURL()
