--- a/views/media.pug
+++ b/views/media.pug
@@ -354,6 +354,21 @@ block content
 
         }
 
+        .noselect {
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+            /* Non-prefixed version, currently
+                                                     supported by Chrome, Edge, Opera and Firefox */
+        }
+
+        .fpsText:hover{
+            color:white;
+        }
+
         /*button.plyr__control  {*/
             /*display: none !important;*/
         /*}*/
@@ -424,6 +439,18 @@ block content
         div.non-player-content(style="position:relative;max-width:1182px;margin:0 auto;")
             // add margin-top 120 on margin-top:120px;"
 
+            div
+                br
+                each frame in [1,3,7,15].reverse()
+                    p.fpsText.noselect(amountOfFrames=-frame style="display:inline;margin-left:7px;") -#{frame} &nbsp
+
+                p(style="display:inline;margin-left:14px;")
+
+
+                each frame in [1,3,7,15]
+                    p.fpsText.noselect(amountOfFrames=frame style="display:inline;margin-left:7px;") +#{frame} &nbsp
+
+
             br
             br
 
@@ -476,16 +503,6 @@ block content
                         if upload.formattedDuration
                             h2.fw(style="display:inline;color: #a9a9a9; !important;").
                                 &nbsp - #{upload.formattedDuration}
-
-                    div.frameJumperLeft(style="position:fixed")
-                        br
-                        each seconds in [1,3,7,15]
-                            h4.fpsText(amountOfFrames=seconds) +#{seconds}
-
-                    div.frameJumperRight(style="position:fixed")
-                        each seconds in [1,3,7,15]
-                            h4.fpsText(amountOfFrames=-seconds) -#{seconds}
-
 
                 if upload.description
                     .uploadDescriptionDiv
