actually dont hide on pause

--- a/views/media.pug
+++ b/views/media.pug
@@ -840,14 +840,14 @@ block extra_js
         console.log('event!!')
         console.log(event);
 
-        $('.frameJumper').css({"visibility":"hidden"});
+        // $('.frameJumper').css({"visibility":"hidden"});
       })
 
       v.addEventListener('pause', function (event) {
         console.log('event!!')
         console.log(event);
 
-        $('.frameJumper').css({"visibility":"initial"});
+        // $('.frameJumper').css({"visibility":"initial"});
       })
 
 
