--- a/views/media.pug
+++ b/views/media.pug
@@ -1150,14 +1150,14 @@ block extra_footer_js
         } else {
 
           $('.frameJumper').css({
-            visibility: 'iniital'
+            visibility: 'visible'
           })
 
           // $('.display-element').css('border', '1px solid #5b5a5a')
 
           // show the header and the rest of the non player content
           $('.headerContainer').css({
-            visibility: 'visible',
+            visibility: 'visible'
           })
 
           $('.non-player-content, footer').css({
