--- a/views/media.pug
+++ b/views/media.pug
@@ -432,16 +432,16 @@ block content
 
         // add margin-top 120 on margin-top:120px;"
 
-        if upload.fileType == 'video'
+        if upload.fileType == 'video' && upload.ffprobeData
             div.frameJumper(style="margin-bottom:1px;margin-top:-14px;")
                 br
-                each frame in [1,3,7,15].reverse()
+                each frame in [1,5,15,30].reverse()
                     p.fpsText.noselect(amountOfFrames=-frame style="display:inline;margin-left:7px;") -#{frame} &nbsp
 
                 p(style="display:inline;margin-left:14px;")
 
 
-                each frame in [1,3,7,15]
+                each frame in [1,5,15,30]
                     p.fpsText.noselect(amountOfFrames=frame style="display:inline;margin-left:7px;") +#{frame} &nbsp
         else
             div.frameJumper(style="margin-bottom:35px;")
