--- a/views/viewPartials/orderByDropdown.pug
+++ b/views/viewPartials/orderByDropdown.pug
@@ -1,15 +1,12 @@
 div.dropdown(style="display:inline;margin-right:15px;")
-    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
+    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
         | Order By: #{orderByEnglishString} &nbsp
-
         span.caret
 
-    ul.dropdown-menu.dropdown
+    ul.dropdown-menu
         li
             a(href=`/search?searchQuery=${searchQuery}&orderBy=popular&mediaType=${mediaType}&searchType=${searchType}`) Popular
         li
             a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=${searchType}`) New To Old
         li
             a(href=`/search?searchQuery=${searchQuery}&orderBy=oldToNew&mediaType=${mediaType}&searchType=${searchType}`) Old To New
-
-
