dont show frame jumper on mobile

--- a/views/media.pug
+++ b/views/media.pug
@@ -213,6 +213,10 @@ block content
         /* anything below this width */
         @media (max-width: 900px) {
 
+            .frameJumper {
+                display: none !important;
+            }
+
             .uploadTitle {
                 margin-top: 0px;
                 margin-bottom: 8px !important;
