--- a/views/account/notifications.pug
+++ b/views/account/notifications.pug
@@ -15,6 +15,18 @@ block content
                     h3 Unread Notifications
                     br
 
+                    .center-block.text-center
+                        ul.pagination
+                            li.page-item
+                                a.page-link(href=`/media/popular/${previousNumber}?media=${media}&category${category}&within=${within}`) <
+
+                            each number in numbersArray
+                                li.page-item(class=(number == highlightedNumber) ? 'active' : undefined)
+                                    a.page-link(href=`/media/popular/${number}?media=${media}&category=${category}&within=${within}`) #{number}
+
+                            li.page-item
+                                a.page-link(href=`/media/popular/${nextNumber}?media=${media}&category=${category}&within=${within}`) >
+
                     each notification in notifications
                         if notification.read == false
                             // react notification
