--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -170,7 +170,7 @@ block content
 
                   if(uniqueTag !== 'playlist'){
 
-                    var newUrl = '/user/' + channelUrl + '/' + uniqueTag.uniqueTag + '?autoplay=off'
+                    var newUrl = '/user/' + channelUrl + '/' + uniqueTag.uniqueTag + '?u=t'
 
                     // redirect instead of opening a new tab, more reliable
                     window.location.href = newUrl;
