add apple icons

--- a/views/media.pug
+++ b/views/media.pug
@@ -516,9 +516,9 @@ block content
 
                         p.descriptionBottom
 
-                    h3.showMoreButton(style="display:none") Show More
+                    h4.showMoreButton(style="display:none;font-size:20px;") Show More
 
-                    h3.showLessButton(style="display:none") Show Less
+                    h4.showLessButton(style="display:none;font-size:20px;") Show Less
 
 
                 div.largerSection
