--- a/views/media.pug
+++ b/views/media.pug
@@ -813,6 +813,17 @@ block content
                                                                 p.fw(style="text-align:left;display:inline-block;")
                                                                     a(href=`/user/${responseComment.commenter.channelUrl}` style="color:#d2d2d2;margin-right:5px;") #{responseComment.commenter.channelName || responseComment.commenter.channelUrl}
                                                                 p.fw(style="display:inline-block;") - #{responseComment.timeAgo} &nbsp
+                                                                    // delete button
+                                                                    // if uploader, admin or commenter, let them delete comment
+                                                                    if isUploaderOrAdmin || ( user && comment.commenter._id == user._id )
+                                                                        a.delete-comment-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
+
+                                                                    // if uploader, allow (un)blocking a user
+                                                                    // uploader cannot (un)block themselves
+                                                                    if isUploader && !comment.commenter.isBlocked && ( user && comment.commenter._id != user._id )
+                                                                        a.block-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Block User
+                                                                    if isUploader && comment.commenter.isBlocked && ( user && comment.commenter._id != user._id )
+                                                                        a.unblock-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Unblock User
                                                             p.fw(style="text-align:left;") #{responseComment.text}
 
                                                         //div.reply-container(style="display:none")
