--- a/views/media.pug
+++ b/views/media.pug
@@ -783,7 +783,7 @@ block content
                                                         // delete button
                                                         // if uploader or admin or commenter, let them delete comment
                                                         if isUploaderOrAdmin || ( user && comment.commenter._id == user._id )
-                                                            a.delete-comment-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
+                                                            a.delete-comment-thread-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
 
                                                         if isUploader && !comment.commenter.isBlocked
                                                             a.block-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Block User
